--- a/test-output/emailable-report.html
+++ b/test-output/emailable-report.html
@@ -9,13 +9,12 @@
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Retried</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
 <tr><th colspan="8">Suite</th></tr>
-<tr><td><a href="#t0">Test</a></td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num attn">1</td><td class="num">21,577</td><td></td><td></td></tr>
+<tr><td><a href="#t0">Test</a></td><td class="num">3</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">38,094</td><td></td><td></td></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Test &#8212; failed</th></tr><tr class="failedeven"><td rowspan="1">Testcase.MakeMyTripSearchTestcase</td><td><a href="#m0">ValidSearch</a></td><td rowspan="1">1700992397487</td><td rowspan="1">13175</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="3">Testcase.MakeMyTripSearchTestcase</td><td><a href="#m0">ValidSearch</a></td><td rowspan="3">1701510319421</td><td rowspan="3">15520</td></tr><tr class="passedeven"><td><a href="#m1">ValidSearch</a></td></tr><tr class="passedeven"><td><a href="#m2">ValidSearch</a></td></tr></tbody>
 </table>
-<h2>Test</h2><h3 id="m0">Testcase.MakeMyTripSearchTestcase#ValidSearch</h3><table class="result"><tr><th>Exception</th></tr><tr><td><div class="stacktrace">java.lang.AssertionError: expected [Flights from Chennai to Pune] but found [Flights from Chennai to Bengaluru]
-	at Testcase.MakeMyTripSearchTestcase.ValidSearch(MakeMyTripSearchTestcase.java:81)
-	at java.util.ArrayList.forEach(ArrayList.java:1259)
-... Removed 33 stack frames</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>Test</h2><h3 id="m0">Testcase.MakeMyTripSearchTestcase#ValidSearch</h3><table class="result"><tr class="param"><th>Parameter #1</th><th>Parameter #2</th><th>Parameter #3</th></tr><tr class="param stripe"><td>MAA</td><td>PNQ</td><td>20</td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m1">Testcase.MakeMyTripSearchTestcase#ValidSearch</h3><table class="result"><tr class="param"><th>Parameter #1</th><th>Parameter #2</th><th>Parameter #3</th></tr><tr class="param stripe"><td>PNQ</td><td>BLR</td><td>14</td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m2">Testcase.MakeMyTripSearchTestcase#ValidSearch</h3><table class="result"><tr class="param"><th>Parameter #1</th><th>Parameter #2</th><th>Parameter #3</th></tr><tr class="param stripe"><td>BLR</td><td>MAA</td><td>28</td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
