--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,12 +1,14 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="61eaf6">  <td>23/11/26 15:17:57</td>   <td>0</td> <td>&nbsp;</td><td title="&gt;&gt;MakeMyTripSearchTestcase.CloseADDs()[pri:0, instance:Testcase.MakeMyTripSearchTestcase@a74868d]">&gt;&gt;CloseADDs</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@183284570</td>   <td></td> </tr>
-<tr bgcolor="61eaf6">  <td>23/11/26 15:17:51</td>   <td>-6679</td> <td title="&gt;&gt;MakeMyTripSearchTestcase.LaunchBrowsers()[pri:0, instance:Testcase.MakeMyTripSearchTestcase@a74868d]">&gt;&gt;LaunchBrowsers</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@183284570</td>   <td></td> </tr>
-<tr bgcolor="61eaf6">  <td>23/11/26 15:18:06</td>   <td>8383</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="MakeMyTripSearchTestcase.ValidSearch()[pri:0, instance:Testcase.MakeMyTripSearchTestcase@a74868d]">ValidSearch</td> 
-  <td>main@183284570</td>   <td></td> </tr>
-<tr bgcolor="61eaf6">  <td>23/11/26 15:18:17</td>   <td>20131</td> <td title="&lt;&lt;MakeMyTripSearchTestcase.quitTheBrowser()[pri:0, instance:Testcase.MakeMyTripSearchTestcase@a74868d]">&lt;&lt;quitTheBrowser</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@183284570</td>   <td></td> </tr>
+<tr bgcolor="99d28e">  <td>23/12/02 15:02:31</td>   <td>0</td> <td>&nbsp;</td><td title="&gt;&gt;MakeMyTripSearchTestcase.CloseADDs()[pri:0, instance:Testcase.MakeMyTripSearchTestcase@150c158]">&gt;&gt;CloseADDs</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@40472007</td>   <td></td> </tr>
+<tr bgcolor="99d28e">  <td>23/12/02 15:02:53</td>   <td>21879</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;MakeMyTripSearchTestcase.GetTestcaseStatus(org.testng.ITestResult)[pri:0, instance:Testcase.MakeMyTripSearchTestcase@150c158]">&lt;&lt;GetTestcaseStatus</td> 
+<td>&nbsp;</td>  <td>main@40472007</td>   <td></td> </tr>
+<tr bgcolor="99d28e">  <td>23/12/02 15:02:25</td>   <td>-5939</td> <td title="&gt;&gt;MakeMyTripSearchTestcase.LaunchBrowsers()[pri:0, instance:Testcase.MakeMyTripSearchTestcase@150c158]">&gt;&gt;LaunchBrowsers</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@40472007</td>   <td></td> </tr>
+<tr bgcolor="99d28e">  <td>23/12/02 15:02:39</td>   <td>8400</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="MakeMyTripSearchTestcase.ValidSearch()[pri:0, instance:Testcase.MakeMyTripSearchTestcase@150c158]">ValidSearch</td> 
+  <td>main@40472007</td>   <td></td> </tr>
+<tr bgcolor="99d28e">  <td>23/12/02 15:02:53</td>   <td>21898</td> <td title="&lt;&lt;MakeMyTripSearchTestcase.quitTheBrowser()[pri:0, instance:Testcase.MakeMyTripSearchTestcase@150c158]">&lt;&lt;quitTheBrowser</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@40472007</td>   <td></td> </tr>
 </table>
