--- a/test-output/old/Suite/methods.html
+++ b/test-output/old/Suite/methods.html
@@ -1,12 +1,22 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="61eaf6">  <td>23/11/26 15:23:09</td>   <td>0</td> <td>&nbsp;</td><td title="&gt;&gt;MakeMyTripSearchTestcase.CloseADDs()[pri:0, instance:Testcase.MakeMyTripSearchTestcase@a74868d]">&gt;&gt;CloseADDs</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@183284570</td>   <td></td> </tr>
-<tr bgcolor="61eaf6">  <td>23/11/26 15:23:30</td>   <td>21592</td> <td title="&lt;&lt;MakeMyTripSearchTestcase.quitTheBrowser()[pri:0, instance:Testcase.MakeMyTripSearchTestcase@a74868d]">&lt;&lt;quitTheBrowser</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@183284570</td>   <td></td> </tr>
-<tr bgcolor="61eaf6">  <td>23/11/26 15:23:03</td>   <td>-5154</td> <td title="&gt;&gt;MakeMyTripSearchTestcase.LaunchBrowsers()[pri:0, instance:Testcase.MakeMyTripSearchTestcase@a74868d]">&gt;&gt;LaunchBrowsers</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@183284570</td>   <td></td> </tr>
-<tr bgcolor="61eaf6">  <td>23/11/26 15:23:17</td>   <td>8395</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="MakeMyTripSearchTestcase.ValidSearch()[pri:0, instance:Testcase.MakeMyTripSearchTestcase@a74868d]">ValidSearch</td> 
-  <td>main@183284570</td>   <td></td> </tr>
+<tr bgcolor="99d28e">  <td>23/12/02 15:15:05</td>   <td>0</td> <td title="&gt;&gt;MakeMyTripSearchTestcase.LaunchBrowsers()[pri:0, instance:Testcase.MakeMyTripSearchTestcase@4524411f]">&gt;&gt;LaunchBrowsers</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1138193439</td>   <td></td> </tr>
+<tr bgcolor="99d28e">  <td>23/12/02 15:15:42</td>   <td>36644</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="MakeMyTripSearchTestcase.ValidSearch(java.lang.String,java.lang.String,java.lang.String)[pri:0, instance:Testcase.MakeMyTripSearchTestcase@4524411f]">ValidSearch</td> 
+  <td>main@1138193439</td>   <td></td> </tr>
+<tr bgcolor="99d28e">  <td>23/12/02 15:15:48</td>   <td>43439</td> <td title="&lt;&lt;MakeMyTripSearchTestcase.quitTheBrowser()[pri:0, instance:Testcase.MakeMyTripSearchTestcase@4524411f]">&lt;&lt;quitTheBrowser</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1138193439</td>   <td></td> </tr>
+<tr bgcolor="99d28e">  <td>23/12/02 15:15:42</td>   <td>36644</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="MakeMyTripSearchTestcase.ValidSearch(java.lang.String,java.lang.String,java.lang.String)[pri:0, instance:Testcase.MakeMyTripSearchTestcase@4524411f]">ValidSearch</td> 
+  <td>main@1138193439</td>   <td></td> </tr>
+<tr bgcolor="99d28e">  <td>23/12/02 15:15:10</td>   <td>5328</td> <td>&nbsp;</td><td title="&gt;&gt;MakeMyTripSearchTestcase.CloseADDs()[pri:0, instance:Testcase.MakeMyTripSearchTestcase@4524411f]">&gt;&gt;CloseADDs</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1138193439</td>   <td></td> </tr>
+<tr bgcolor="99d28e">  <td>23/12/02 15:15:48</td>   <td>43416</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;MakeMyTripSearchTestcase.GetTestcaseStatus(org.testng.ITestResult)[pri:0, instance:Testcase.MakeMyTripSearchTestcase@4524411f]">&lt;&lt;GetTestcaseStatus</td> 
+<td>&nbsp;</td>  <td>main@1138193439</td>   <td></td> </tr>
+<tr bgcolor="99d28e">  <td>23/12/02 15:15:48</td>   <td>43416</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;MakeMyTripSearchTestcase.GetTestcaseStatus(org.testng.ITestResult)[pri:0, instance:Testcase.MakeMyTripSearchTestcase@4524411f]">&lt;&lt;GetTestcaseStatus</td> 
+<td>&nbsp;</td>  <td>main@1138193439</td>   <td></td> </tr>
+<tr bgcolor="99d28e">  <td>23/12/02 15:15:42</td>   <td>36644</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="MakeMyTripSearchTestcase.ValidSearch(java.lang.String,java.lang.String,java.lang.String)[pri:0, instance:Testcase.MakeMyTripSearchTestcase@4524411f]">ValidSearch</td> 
+  <td>main@1138193439</td>   <td></td> </tr>
+<tr bgcolor="99d28e">  <td>23/12/02 15:15:48</td>   <td>43416</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;MakeMyTripSearchTestcase.GetTestcaseStatus(org.testng.ITestResult)[pri:0, instance:Testcase.MakeMyTripSearchTestcase@4524411f]">&lt;&lt;GetTestcaseStatus</td> 
+<td>&nbsp;</td>  <td>main@1138193439</td>   <td></td> </tr>
 </table>
